--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>Hello, world!</title>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="#">------</a>
     </nav>
-    <div class="container" id="levelCourse">
-        
-    </div>
-    <pre id="contePre">
+    <div class="container">
+        <div class="cardInformation">
+          <!-- <h1 id="levelCourse"></h1>
+          <h3></h3>
+          <div class="ListView" id="ListViewLevel">
 
-    </pre>
+          </div> -->
+        </div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
