--- a/index.html
+++ b/index.html
@@ -15,14 +15,19 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="#">------</a>
     </nav>
-    <div class="container">
-        <div class="cardInformation">
-          <!-- <h1 id="levelCourse"></h1>
+    <div class="container-fluid">
+         <!-- <div class="cardInformation">
+         <h1 id="levelCourse"></h1>
           <h3></h3>
           <div class="ListView" id="ListViewLevel">
 
-          </div> -->
+          </div> 
+        </div>-->
+        <button id="copy-button">Copiar</button>
+        <div class="cardConteiner">
+
         </div>
+        <pre id="finalJson" class="preContainerJson" style="width: 1px;height:1px;"></pre>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
